# moriarty

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  codecov.yml  pyproject.toml  start-minikube.sh
.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml  ghcr-build.yml  ghcr-publish.yml  test-deploy-depends.yml  test-example.yml  test-python-package.yml  test-sidecar-depends.yml  test-sidecar-sdk-depends.yml
assets/: Architecture.drawio
dev/: start-pg.sh
docker/: Dockerfile  Dockerfile.matrix  Dockerfile.sidecar
docs/source/: conf.py  index.rst  usage.rst
example/deploy-on-k8s/: configs.yaml  matrix-connector.yaml  secrets.yaml
example/deploy-on-k8s/compute-image/: Dockerfile  README.md  app.py  config.json  dump_config.py
example/deploy-on-k8s/infra/: pgsql.yaml  redis.yaml
example/deploy-on-k8s/operator/: init.yaml  matrix-operator-api.yaml  matrix-operator-autoscaler.yaml  matrix-operator-bridge.yaml  matrix-operator-callback.yaml  role.yaml
example/extension/custom-bridge/: pyproject.toml
example/extension/custom-bridge/custom_bridge/: imp.py
example/extension/custom-bridge/tests/: test_custom_bridge.py
example/extension/custom-spawner/: pyproject.toml
example/extension/custom-spawner/custom_spawner/: imp.py
example/extension/custom-spawner/tests/: test_custom_spawner.py
moriarty/: __init__.py  envs.py  log.py  params.py  tools.py
moriarty/deploy/: cli.py  config.py  endpoint.py  sdk.py
moriarty/init/: cli.py
moriarty/matrix/: cli.py  envs.py
moriarty/matrix/connector/: app.py  cli.py  invoker.py  params.py  sdk.py
moriarty/matrix/job_manager/: bridge_wrapper.py  job_manager.py  params.py
moriarty/matrix/job_manager/bridge/: manager.py  plugin.py
moriarty/matrix/job_manager/bridge/impl/: pubsub_bridge.py  sqs_bridge.py
moriarty/matrix/operator/: alembic.ini  app.py  autoscaler.py  cli.py  config.py  dbutils.py  operator.py  orm.py
moriarty/matrix/operator/alembic/: env.py
moriarty/matrix/operator/spawner/: manager.py  plugin.py
moriarty/matrix/operator/spawner/impl/: k8s.py  local.py
moriarty/matrix/operator_/: api_app.py  autoscaler.py  callback.py  callback_app.py  cli.py  config.py  daemon.py  dbutils.py  enums_.py  mixin.py  operator_.py  orm.py  params.py  rds.py  tools.py
moriarty/matrix/operator_/alembic/: env.py
moriarty/matrix/operator_/spawner/: manager.py  plugin.py
moriarty/matrix/operator_/spawner/impl/: k8s.py
moriarty/matrix/operators/: app.py  autoscaler.py  dbutils.py
moriarty/mock/: mock_bridge.py  mock_spawner.py
moriarty/sidecar/: cli.py  consumer.py  envs.py  params.py  producer.py  vars.py
tests/: conftest.py  test_moriarty.py  test_tools.py
tests/bridge/: test_bridge_manager.py  test_wrapper.py
tests/bridge/impl/: test_pubsub_bridge.py  test_sqs_bridge.py
tests/matrix/connector/: conftest.py  test_connector_hello.py
tests/matrix/operator_/: conftest.py
tests/matrix/operator_/api/: conftest.py  test_api.py
tests/matrix/operator_/autoscale/: test_autoscaler.py
tests/matrix/operator_/bridge/: test_bridger.py
tests/matrix/operator_/callback/: conftest.py  test_callback.py
tests/matrix/operator_/spawner/: test_kube_spawner.py
tests/matrix/spawner/: conftest.py  test_kube_spawner.py
tests/sidecar/: conftest.py  test_sidecar.py
tests/sidecar/mock/: app.py
tests/spawner/: test_spawner_manager.py
