[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_bridge"
dependencies = ["moriarty[matrix]"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
[project.optional-dependencies]
test = ["pytest"]

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "custom_bridge/__init__.py"

[project.entry-points."moriarty.matrix.bridge"]
custom_bridge = "custom_bridge.imp"
