[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_spawner"
dependencies = ["moriarty[matrix]"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
[project.optional-dependencies]
test = ["pytest"]

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "custom_spawner/__init__.py"

[project.entry-points."moriarty.matrix.spawner"]
custom_spawner = "custom_spawner.imp"
